[tool.poetry]
name = "osu!GSTLive event backend API"
version = "0.1.0"
description = "Starts up the GSTLive event backend API server"
authors = ["Efehan Atici <efehanatici@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
